syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteResponseModel);
}

message GetDiscountRequest{
	string productName = 1;
}

message CouponModel{
	int32 id= 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest{
	CouponModel Coupon = 1;
}

message UpdateDiscountRequest{
	CouponModel Coupon = 1;
}

message DeleteDiscountRequest{
	int32 id = 1;
}

message DeleteResponseModel{
	bool succes = 1;
}